--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -53,7 +53,7 @@
 	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
 	Date-Added = {2014-12-09 14:07:56 +0000},
 	Date-Modified = {2016-09-02 05:36:21 +0000},
-	Journal = {IEEE_J_COM},
+	Journal = IEEE_J_COM,
 	Keywords = {giuseppe},
 	Month = feb,
 	Number = {2},
@@ -140,3 +140,16 @@
 	Volume = {59},
 	Year = 2013,
 	Bdsk-Url-1 = {http://people.lids.mit.edu/yp/homepage}}
+
+@article{CEK19,
+	Author = {S. Chen and M. Effros and V. Kostina},
+	Journal = {arXiv:1902.03366v3},
+	Month = sep,
+	Title = {Lossless Source Coding in the Point-to-Point, Multiple Access, and Random Access Scenarios},
+	Year = 2019}
+
+@book{HAN03,
+	author = {T. S. Han},
+	title = {Information-Spectrum Methods in Information Theory},
+	publisher = {Springer-Verlag Berlin Heidelberg},
+	year = 2003}
